--- a/src/Style/Womennav.css
+++ b/src/Style/Womennav.css
@@ -42,9 +42,10 @@
     .line-w{
         padding-bottom: 20px;
         border-bottom: 1px solid rgb(225, 213, 213);
+        font-size:16px;
     }
     .margin-topw{
-        margin-top:40px;
+        margin-top:19px;
     }
     .color-bold-w{
         font-weight: 500;
